--- a/css/dark.css
+++ b/css/dark.css
@@ -1,5 +1,4 @@
 
-
 .grid-container {
   display: grid;
   grid-template-columns:  auto auto;
@@ -38,6 +37,16 @@ filter: drop-shadow(0px 3px 12px rgba(94, 168, 255, 0.502));*/
     font-weight: 700;
     color: white;
     
+}
+.dark-mode .bt-1 {
+    color: white;
+}
+
+.dark-mode .bt-2 {
+    color: white;
+}
+.dark-mode .bt-3 {
+    color: white;
 }
 
 .dark-mode .c2{
