--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: SF Pro AR,SF Pro Gulf,SF Pro Text,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;
+font-family: "SF Pro Text";
         transition: .2s;
     background-color: #fff;
 }
@@ -15,7 +15,6 @@ body {
     /*
     background-image: url(https://repo-cdn.dynastic.co/322503971522478081.e211f4e1bae20591778b9f76ef6ba1d2);
     background-size: cover;
-
 background-image: linear-gradient(-90deg, #a4adff, #8390ff);
 filter: drop-shadow(0px 3px 12px rgba(94, 168, 255, 0.502));*/
         background-color: #fff;
@@ -274,6 +273,7 @@ filter: drop-shadow(0px 3px 12px rgba(94, 168, 255, 0.502));*/
     padding: 10px;
     border-radius: 8px;
     height: 4em;
+    
 }
 .bd-placeholder-img {
     font-size: 1.125rem;
@@ -288,29 +288,47 @@ filter: drop-shadow(0px 3px 12px rgba(94, 168, 255, 0.502));*/
     flex: 1;
 }
 .bt-1{
-    background-color: #cacaca;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    width: 30%;
-    height: 0.5em;
-    border-radius: 4px
+   /* background-color: #cacaca;*/
+    margin: 3px;
+    font-size: 15px;
+    font-weight: 800;
+    color: black;
     
 }
 .bt-2{
-    background-color: #cacaca;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    width: 50%;
-    height: 0.5em;
-    border-radius: 4px
+    margin: 3px;
+    font-size: 13px;
+    font-weight: 300;
+    color: black;
     
 }
 .bt-3{
-    background-color: #cacaca;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    width: 70%;
-    height: 0.5em;
-    border-radius: 4px
+    margin: 3px;
+    font-size: 13px;
+    font-weight: 300;
+    color: black;
     
+}
+.butget {
+    text-decoration: none;
+    box-sizing: border-box;
+    margin: 0;
+    overflow: visible;
+    text-transform: none;
+    display: inline-block;
+    font-weight: 600;
+    text-align: center;
+    vertical-align: middle;
+    user-select: none;
+    border: 0px solid transparent;
+    padding: 0.2rem 1.3rem;
+    font-size: 13px;
+    line-height: 1.5;
+    border-radius: 5rem;
+    color: #fff;
+    background-color: #007bff;
+  /*  background: linear-gradient(0deg, #267de6 2%, #69aefc 60%);*/
+    border-color: #007bff;
+    cursor: pointer;
+    float: right;
 }
